// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NumberPagination /> check how renders should render all correctly (without hide-arrow class on arrows) 1`] = `
<DocumentFragment>
  .c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.5rem;
}

.c0 .arrow {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0 0.8rem;
}

.c0 .hide-arrow {
  opacity: 0;
  pointer-events: none;
}

.c0 .ellipsis {
  margin: 0 0.8rem;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
}

.c0 .of {
  margin: 0 0.8rem;
}

.c0 .number-link {
  padding: 0.8rem;
  -webkit-transition: color 0.1s;
  transition: color 0.1s;
}

.c0 .number-link:hover {
  color: #06AD96;
}

.c0 .number-link.active {
  color: #22A7F0;
  font-weight: 700;
}

.c0 .number-link.active:hover {
  color: #22A7F0;
  cursor: default;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 > svg {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
  fill: #777;
  width: 1.7rem;
  height: 1.7rem;
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c2 > svg {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
  fill: #777;
  width: 1.7rem;
  height: 1.7rem;
}

<div
    class="c0"
    data-testid="NumberPagination"
  >
    <a
      class="arrow"
      data-testid="NumberPagination-left-arrow"
    >
      <div
        class="c1"
        color=""
      >
        <svg>
          arrow.svg
        </svg>
      </div>
    </a>
    <a
      class="number-link"
      data-testid="NumberPagination-page1"
    >
      1
    </a>
    <a
      class="number-link active"
      data-testid="NumberPagination-page2"
    >
      2
    </a>
    <a
      class="number-link"
      data-testid="NumberPagination-page3"
    >
      3
    </a>
    <span
      class="of"
    >
      of
    </span>
    <span
      class="of"
      data-testid="NumberPagination-number-of-pages"
    >
      3
    </span>
    <a
      class="arrow"
      data-testid="NumberPagination-right-arrow"
    >
      <div
        class="c2"
        color=""
      >
        <svg>
          arrow.svg
        </svg>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`<NumberPagination /> check how renders should render ellipsis and six number links and page 8 has active class if p is 8, quantity is 20, per page is 2 1`] = `
<DocumentFragment>
  .c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.5rem;
}

.c0 .arrow {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0 0.8rem;
}

.c0 .hide-arrow {
  opacity: 0;
  pointer-events: none;
}

.c0 .ellipsis {
  margin: 0 0.8rem;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
}

.c0 .of {
  margin: 0 0.8rem;
}

.c0 .number-link {
  padding: 0.8rem;
  -webkit-transition: color 0.1s;
  transition: color 0.1s;
}

.c0 .number-link:hover {
  color: #06AD96;
}

.c0 .number-link.active {
  color: #22A7F0;
  font-weight: 700;
}

.c0 .number-link.active:hover {
  color: #22A7F0;
  cursor: default;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 > svg {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
  fill: #777;
  width: 1.7rem;
  height: 1.7rem;
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c2 > svg {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
  fill: #777;
  width: 1.7rem;
  height: 1.7rem;
}

<div
    class="c0"
    data-testid="NumberPagination"
  >
    <a
      class="arrow"
      data-testid="NumberPagination-left-arrow"
    >
      <div
        class="c1"
        color=""
      >
        <svg>
          arrow.svg
        </svg>
      </div>
    </a>
    <a
      class="number-link"
      data-testid="NumberPagination-page1"
    >
      1
    </a>
    <span
      class="ellipsis"
    >
      ...
    </span>
    <a
      class="number-link"
      data-testid="NumberPagination-page6"
    >
      6
    </a>
    <a
      class="number-link"
      data-testid="NumberPagination-page7"
    >
      7
    </a>
    <a
      class="number-link active"
      data-testid="NumberPagination-page8"
    >
      8
    </a>
    <a
      class="number-link"
      data-testid="NumberPagination-page9"
    >
      9
    </a>
    <a
      class="number-link"
      data-testid="NumberPagination-page10"
    >
      10
    </a>
    <span
      class="of"
    >
      of
    </span>
    <span
      class="of"
      data-testid="NumberPagination-number-of-pages"
    >
      10
    </span>
    <a
      class="arrow"
      data-testid="NumberPagination-right-arrow"
    >
      <div
        class="c2"
        color=""
      >
        <svg>
          arrow.svg
        </svg>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`<NumberPagination /> check how renders should render ellipsis and six number links and page 10 has active class if p is 10, quantity is 20, per page is 2 1`] = `
<DocumentFragment>
  .c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.5rem;
}

.c0 .arrow {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0 0.8rem;
}

.c0 .hide-arrow {
  opacity: 0;
  pointer-events: none;
}

.c0 .ellipsis {
  margin: 0 0.8rem;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
}

.c0 .of {
  margin: 0 0.8rem;
}

.c0 .number-link {
  padding: 0.8rem;
  -webkit-transition: color 0.1s;
  transition: color 0.1s;
}

.c0 .number-link:hover {
  color: #06AD96;
}

.c0 .number-link.active {
  color: #22A7F0;
  font-weight: 700;
}

.c0 .number-link.active:hover {
  color: #22A7F0;
  cursor: default;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 > svg {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
  fill: #777;
  width: 1.7rem;
  height: 1.7rem;
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c2 > svg {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
  fill: #777;
  width: 1.7rem;
  height: 1.7rem;
}

<div
    class="c0"
    data-testid="NumberPagination"
  >
    <a
      class="arrow"
      data-testid="NumberPagination-left-arrow"
    >
      <div
        class="c1"
        color=""
      >
        <svg>
          arrow.svg
        </svg>
      </div>
    </a>
    <a
      class="number-link"
      data-testid="NumberPagination-page1"
    >
      1
    </a>
    <span
      class="ellipsis"
    >
      ...
    </span>
    <a
      class="number-link"
      data-testid="NumberPagination-page6"
    >
      6
    </a>
    <a
      class="number-link"
      data-testid="NumberPagination-page7"
    >
      7
    </a>
    <a
      class="number-link"
      data-testid="NumberPagination-page8"
    >
      8
    </a>
    <a
      class="number-link"
      data-testid="NumberPagination-page9"
    >
      9
    </a>
    <a
      class="number-link active"
      data-testid="NumberPagination-page10"
    >
      10
    </a>
    <span
      class="of"
    >
      of
    </span>
    <span
      class="of"
      data-testid="NumberPagination-number-of-pages"
    >
      10
    </span>
    <a
      class="arrow hide-arrow"
      data-testid="NumberPagination-right-arrow"
    >
      <div
        class="c2"
        color=""
      >
        <svg>
          arrow.svg
        </svg>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`<NumberPagination /> check how renders should render six number links if p is 1 and page 1 has active class, quantity is 20, per page is 2 1`] = `
<DocumentFragment>
  .c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.5rem;
}

.c0 .arrow {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0 0.8rem;
}

.c0 .hide-arrow {
  opacity: 0;
  pointer-events: none;
}

.c0 .ellipsis {
  margin: 0 0.8rem;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
}

.c0 .of {
  margin: 0 0.8rem;
}

.c0 .number-link {
  padding: 0.8rem;
  -webkit-transition: color 0.1s;
  transition: color 0.1s;
}

.c0 .number-link:hover {
  color: #06AD96;
}

.c0 .number-link.active {
  color: #22A7F0;
  font-weight: 700;
}

.c0 .number-link.active:hover {
  color: #22A7F0;
  cursor: default;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 > svg {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
  fill: #777;
  width: 1.7rem;
  height: 1.7rem;
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c2 > svg {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
  fill: #777;
  width: 1.7rem;
  height: 1.7rem;
}

<div
    class="c0"
    data-testid="NumberPagination"
  >
    <a
      class="arrow hide-arrow"
      data-testid="NumberPagination-left-arrow"
    >
      <div
        class="c1"
        color=""
      >
        <svg>
          arrow.svg
        </svg>
      </div>
    </a>
    <a
      class="number-link active"
      data-testid="NumberPagination-page1"
    >
      1
    </a>
    <a
      class="number-link"
      data-testid="NumberPagination-page2"
    >
      2
    </a>
    <a
      class="number-link"
      data-testid="NumberPagination-page3"
    >
      3
    </a>
    <a
      class="number-link"
      data-testid="NumberPagination-page4"
    >
      4
    </a>
    <a
      class="number-link"
      data-testid="NumberPagination-page5"
    >
      5
    </a>
    <a
      class="number-link"
      data-testid="NumberPagination-page6"
    >
      6
    </a>
    <span
      class="of"
    >
      of
    </span>
    <span
      class="of"
      data-testid="NumberPagination-number-of-pages"
    >
      10
    </span>
    <a
      class="arrow"
      data-testid="NumberPagination-right-arrow"
    >
      <div
        class="c2"
        color=""
      >
        <svg>
          arrow.svg
        </svg>
      </div>
    </a>
  </div>
</DocumentFragment>
`;
